<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:paddingHorizontal="30dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    style="@style/Base.Theme.Task1_anagram">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_input_text"
        style="@style/CustomTextInputLayout.FilledBox"

        android:hint="@string/input_text_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_input_text"
            android:layout_height="98dp"
            style="@style/CustomTextInputEditText.FilledBox"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_filter_text"
        style="@style/CustomTextInputLayout.FilledBox"
        android:layout_marginTop="13dp"
        android:hint="@string/input_filter_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_filter_text"
            android:layout_height="98dp"
            style="@style/CustomTextInputEditText.FilledBox"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_anagram"
        style="@style/InitialTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/anagram_hint"
        android:textAlignment="center">
    </TextView>

</LinearLayout>